# FlaskYL

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
lowlands_vpn/: __init__.py  config.py  data.py  database.py  extensions.py  forms.py  models.py  routes.py  services.py  vpn.py
scripts/: xray-add-client.sh  xray-build-vless-link.sh  xray-list-clients.sh  xray-remove-client.sh  xray.env.example
static/css/: main.css
templates/: base.html  csrf_error.html  dashboard.html  index.html  login.html  register.html
templates/admin/: dashboard.html  user_detail.html  users.html
tests/: conftest.py  test_non_payment_flows.py
